--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
     <!--Шапка-->
 <header class="header">
    <div class="container">
+    <a href="/" class="logo"><span>Web</span>Studio</a>
     <nav> 
-        <a href="/" class="logo"><span>Web</span>Studio</a>
     <ul class="site-nav list">
-        <li><a href="" class="link">Студия</a></li>
-        <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-        <li><a href="" class="link">Контакты</a></li>
-    </ul> 
-   </nav>
-    <ul class="contacts list">
-        <li>
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
+        <li><a href="" class="header-item">Студия</a></li>
+        <li><a href="./portfolio.html" class="header-item current">Портфолио</a></li>
+        <li><a href="" class="header-item">Контакты</a></li>
     </ul>
+
+   </nav>
+    <div class="header-contacts">
+    <ul class="contacts list">
+     
+        <li>
+            <a href="mailto:info@devstudio.com" class="header-item">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+380961111111" class="header-item">+38 096 111 11 11</a>
+        </li> 
+    </ul>
+   </div>
+   
     </div>
 </header>
   <main>
@@ -80,57 +85,59 @@
     <div class="container">
   <h2 class="service-title">Чем мы занимаемся</h2>
   <ul class="service-list list">
-     <li>
-    <img src="./images/icon1.jpg" alt="Ноутбук" width="370">
+     <li class="img-item">
+    <img src="./images/icon1.jpg" alt="Ноутбук" width="370" >
      </li>
-     <li>
+     <li class="img-item">
         <img src="./images/icon2.jpg" alt="Смартфон" width="370">
     </li>
-    <li>
-        <img src="./images/icon3.jpg" alt="Планшет" width="370">
+    <li class="img-item">
+        <img src="./images/icon3.jpg" alt="Планшет" width="370" >
     </li>
  </ul>
 </div>
 </section>
 
-
 <!--Команда-->
 <section class="section-team">
+    <div class="container">
     <h2 class="section-title">Наша команда</h2>
-    <ul class="list">
-        <li>
-          <img src="./images/icon2.1.jpg" alt="Игорь Демьяненко" width="270" class="team-img">
-            <div class="team">
+    <ul class="team-list">
+        <li class="team-item">
+          <img src="./images/icon2.1.jpg" alt="Игорь Демьяненко" width="270">
+            <div class="team-container">
                   <h3 class="title">Игорь Демьяненко</h3>
                   <p lang="en" class="text">Product Designer</p>
             </div>   
         </li>
 
-        <li>
-           <img src="./images/icon2.2.jpg" alt="Ольга Репина" width="270" class="team-img">
-             <div class="team">
+        <li class="team-item">
+           <img src="./images/icon2.2.jpg" alt="Ольга Репина" width="270">
+             <div class="team-container">
                   <h3 class="title">Ольга Репина</h3>
                   <p lang="en" class="text">Frontend Developer</p>
              </div>   
         </li>
 
-        <li>
-            <img src="./images/icon2.3.jpg" alt="Николай Тарасов" width="270" class="team-img">
-              <div class="team">
+        <li class="team-item">
+            <img src="./images/icon2.3.jpg" alt="Николай Тарасов" width="270">
+              <div class="team-container">
                   <h3 class="title">Николай Тарасов</h3>
                   <p lang="en" class="text">Marketing</p>
               </div>   
         </li>
 
-        <li>
-            <img src="./images/icon2.4.jpg" alt="Михаил Ермаков" width="270"class="team-img">
-              <div class="team">
+        <li class="team-item">
+            <img src="./images/icon2.4.jpg" alt="Михаил Ермаков" width="270">
+              <div class="team-container">
                   <h3 class="title">Михаил Ермаков</h3>
                   <p lang="en" class="text">UI Designer</p>
               </div>   
         </li>
    </ul>
+</div>
 </section>
+
 
 </main>
 
