--- a/portfolio.html
+++ b/portfolio.html
@@ -13,25 +13,29 @@
 <body>
     <!--Шапка-->
     <header class="header">
-        <div class="container">
-        <nav> <a href="/" class="logo"><span>Web</span>Studio</a>
+         <div class="container">
+            <a href="/" class="logo"><span>Web</span>Studio</a>
+        <nav>
         <ul class="site-nav list">
-            <li><a href="" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li><a href="" class="header-item">Студия</a></li>
+            <li><a href="./portfolio.html" class="header-item">Портфолио</a></li>
+            <li><a href="" class="header-item">Контакты</a></li>
         </ul> 
+
        </nav>
+       <div class="header-contacts"></div>
         <ul class="contacts list">
             <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="header-item">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="header-item">+38 096 111 11 11</a>
             </li>
         </ul>
+        </div>
+
     </div>
     </header> 
-    
 <main>
        
         <!--Проекты-->
@@ -40,12 +44,13 @@
     <div class="container">
         <h1  class="visually-hidden">Проекты</h1>
      <ul class="button-list list">
-         <li><button type="button" class="projects-btn">Все</button></li> 
-         <li><button type="button" class="projects-btn">Веб-сайты</button></li>
-         <li><button type="button" class="projects-btn">Приложения</button></li>
-         <li><button type="button" class="projects-btn">Дизайн</button></li>
-         <li><button type="button" class="projects-btn">Маркетинг</button></li>
-     </ul>
+         <li class="btn-item"><button type="button" class="projects-btn">Все</button></li> 
+         <li class="btn-item"><button type="button" class="projects-btn">Вебсайты</button></li>
+         <li class="btn-item"><button type="button" class="projects-btn">Приложения</button></li>
+         <li class="btn-item"><button type="button" class="projects-btn">Дизайн</button></li>
+         <li class="btn-item"><button type="button" class="projects-btn">Маркетинг</button></li>
+
+    </ul>
 
      <ul class="projects-list list">
 
@@ -133,7 +138,6 @@
 
 <!--Футер-->
 <footer class="footer">
-    <div class="container">
     <a href="/" class="logo"><span>Web</span>Studio</a>
      <address class="address-text">
       г. Киев, пр-т Леси Украинки, 26
@@ -142,9 +146,9 @@
         <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br>
         <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
      </address>
-    </div>
 </footer>
-
+  
+  
 </body>
 </html>
 
