--- a/index.html
+++ b/index.html
@@ -147,13 +147,15 @@
 <footer class="footer">
     <div class="container">
     <a href="/" class="logo"><span>Web</span>Studio</a>
-     <address class="address-text">
+     <div class="address-content">
+    <address class="address-text">
       г. Киев, пр-т Леси Украинки, 26
      </address>
      <address class="address-text">
         <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br>
         <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
      </address>
+    </div>
     </div>
 </footer>
   
