--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         </ul> 
 
        </nav>
-       <div class="header-contacts"></div>
+       <div class="header-contacts">
         <ul class="contacts list">
             <li>
                 <a href="mailto:info@devstudio.com" class="header-item">info@devstudio.com</a>
@@ -33,9 +33,9 @@
             </li>
         </ul>
         </div>
-
     </div>
     </header> 
+
 <main>
        
         <!--Проекты-->
