--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
     <address class="address-text">
       г. Киев, пр-т Леси Украинки, 26
      </address>
-     <address class="address-text">
+     <address class="address-contacts">
         <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br>
         <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
      </address>
