--- a/portfolio.html
+++ b/portfolio.html
@@ -145,6 +145,8 @@
 
 </main>
 
+<!--Футер-->
+
 <footer class="footer">
     <div class="container">
     <a href="/" class="logo"><span>Web</span>Studio</a>
@@ -152,14 +154,18 @@
     <address class="address-text">
       г. Киев, пр-т Леси Украинки, 26
      </address>
-     <address class="address-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br>
-        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-     </address>
+     <ul class="address-contacts">
+        <li class="address-link">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a><br>
+        </li>
+        <li class="address-link">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        </li> 
+     </ul>
     </div>
     </div>
 </footer>
-  
+
 </body>
 </html>
 
